# XLThermo.Data

./: .gitignore  CMakeLists.txt  CompCorrelations.hpp  CompProperties.hpp  Database.cpp  Database.hpp  XLThermo.Data.xlsm  XLThermoData.cpp  XLThermoData.hpp
